[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-lightningprox"
version = "0.1.0"
description = "LangChain integration for LightningProx - Pay-per-use AI via Lightning Network micropayments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "LightningProx", email = "hello@lightningprox.com" }
]
keywords = [
    "langchain",
    "lightning",
    "bitcoin",
    "ai",
    "llm",
    "micropayments",
    "claude",
    "gpt",
    "autonomous-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://lightningprox.com"
Documentation = "https://lightningprox.com/docs"
Repository = "https://github.com/unixlamadev-spec/langchain-lightningprox"
Issues = "https://github.com/unixlamadev-spec/langchain-lightningprox/issues"

[tool.hatch.build.targets.wheel]
packages = ["langchain_lightningprox"]
